# SSY_projekt

./: README.md  info.md  sh.exe.stackdump
Zigbee_TempMeas_Server_Router2/: CMakeLists.txt  CMakePresets.json  flash_output.txt  flash_output_debug.txt  flash_output_debug2.txt  stm32cubeide-export.json  zcl_color_server_dump.txt
Zigbee_TempMeas_Server_Router2/Core/Inc/: app_conf.h  dht11.h  main.h
Zigbee_TempMeas_Server_Router2/Core/Src/: dht11.c  main.c
Zigbee_TempMeas_Server_Router2/Drivers/BSP/Components/mx25r3235f/: mx25r3235f.h  mx25r3235f_conf_template.h
Zigbee_TempMeas_Server_Router2/Drivers/BSP/STM32WBAxx_Nucleo/: stm32wbaxx_nucleo.h  stm32wbaxx_nucleo_conf_template.h  stm32wbaxx_nucleo_errno.h  stm32wbaxx_nucleo_xspi.h
Zigbee_TempMeas_Server_Router2/Middlewares/ST/STM32_WPAN/: LICENSE.txt
Zigbee_TempMeas_Server_Router2/Middlewares/ST/STM32_WPAN/ble/audio/Inc/: cap_types.h
Zigbee_TempMeas_Server_Router2/Middlewares/ST/STM32_WPAN/ble/stack/doc/: STM32WBA_BLE_Stack_User_Manual.html  STM32WBA_BLE_Wireless_Interface.html
Zigbee_TempMeas_Server_Router2/Middlewares/ST/STM32_WPAN/ble/stack/include/: ble_core.h  ble_legacy.h
Zigbee_TempMeas_Server_Router2/Middlewares/ST/STM32_WPAN/link_layer/ll_cmd_lib/inc/: bsp.h  event_manager.h  mac_host_intf.h  power_table.h  pta.h
Zigbee_TempMeas_Server_Router2/Middlewares/ST/STM32_WPAN/mac_802_15_4/core/inc/: st_mac_802_15_4_raw_svc.h
Zigbee_TempMeas_Server_Router2/STM32_WPAN/App/: app_zigbee.c  app_zigbee_endpoint.c
Zigbee_TempMeas_Server_Router2/cmake/: vscode_generated.cmake
(+90 files in other folders)
